# openbook-v2-trades

./: Cargo.toml  README.md  restart.sh
openbookv2-generated/: Cargo.toml
openbookv2-generated/src/: lib.rs
openbookv2-printer/: Cargo.toml
openbookv2-printer/examples/: listener.rs  market.rs  parser.rs
openbookv2-printer/src/: constants.rs  logs.rs  main.rs  market.rs  name.rs  utils.rs
