[workspace]
members = [
    "openbookv2-generated",
    "openbookv2-printer",
]

[workspace.dependencies]
# openbook-v2 = { git = "https://github.com/openbook-dex/openbook-v2" }
anchor-lang = "0.29.0"
solana-account-decoder = "~1.17.1"
solana-client = "~1.17.1"
solana-logger = "~1.17.1"
solana-program = "~1.17.1"
