[workspace]
members = [
    "openbookv2-generated",
    "openbookv2-printer",
]

[workspace.dependencies]
# openbook-v2 = { git = "https://github.com/openbook-dex/openbook-v2" }
anchor-lang = "0.31.0"
solana-account-decoder = "~1.18.21"
solana-client = "~1.18.21"
solana-logger = "~1.18.21"
solana-program = "~1.18."