[package]
name = "openbookv2-printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { workspace = true  }
solana-client = { workspace = true  }
solana-program = { workspace = true  }
openbookv2-generated = {path = "../openbookv2-generated"}
base64 = "0.22.1"
clap = { version = "4.3.11", features = ["derive"] }
log = "0.4.19"
env_logger = "0.10.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = "1.37.0"
futures = "0.3.30"
zmq = "0.10.0"
solana-sdk = "1.18.20"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc", rev = "6a9712b" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc", rev = "6a9712b" }
